Project Description
-------------------
zenTrack is a highly configurable tracking system based
on a flexible and high quality code base designed for small
to medium-large businesses.

It features a simple interface, fully adaptable administration
and user experience, internationalization, platform and database
abstraction, and endless possibilities for project expansion.
--------------------
2009-04-08, alberts -- REVISION 63
  Fix bug in year calculation for SecondIn function in zenDate class tt#8276
   -  includes/zenDate.class.php

2009-03-29, alberts -- REVISION 62
  Fix "My Tickets" pagination no working properly tt#8240
   -  includes/templates/listTickets.php

2009-03-25, alberts -- REVISION 59
  Fix delete ticket functionality not working tt#8239
   -   trunk/www/admin/deleteTicket.php
   -   trunk/includes/templates/deleteTicketsConfirmation.php

2009-02-13, donkeybandit -- REVISION 52
  Javascript fix email notifier tt#8226
    - trunk/www/misc/find_recipient.php

  Updated notification code to send emails on ticket create to notify list 
    - trunk/includes/zenTrack.class.php
    - trunk/www/addSubmit.php
    - trunk/www/addProjectSubmit.php

2009-02-06, alberts -- REVISION 51
  Fix incorrect totals in project task list, tt#8222
    - trunk/includes/zenTrack.class.php

----- VERSION 2.6.4 (2009-01-24) -----

2009-01-24, Kato -- REVISION 50
  Final release prep
    - trunk/install/README.txt
    - trunk/install/utils/upgrade_base.sql
    - trunk/INSTALL.txt
    - trunk/RELEASE_NOTES.txt
    - trunk/UPGRADE.txt

2009-01-23, alberts -- REVISION 49
  CSS fix for 'show all logs' label and checkbox tt#8221
    - trunk/www/styles.php

2009-01-01, Kato -- REVISION 48
  Integrated DPD branch, including: egate fixes, new REST API,
  flex customer portal
    - branches/DPD-2.7 [many files]

2008-11-03, Kato -- REVISION 46
  Finished ticket create via api
  Corrected success="true" in list_users
   - branches/DPD-2.7/includes/ZenHttpApi.php