@@ -12,25 +12,59 @@ else {
   /*
   ** DETERMINE WHICH SCREEN TO SHOW AND SHOW IT
   */
-  for($i=0; $i<strlen($page_mode); $i++) {
-    $l = substr($page_mode,$i,1);
+  if( $page_mode == 'other' ) {
+    // WARNING: Changing $display_range will likely break code in the loop below.
+    $display_range = '!0123456789';
+  }
+  else {
+    $display_range = $page_mode;
+  } 
+  // We are going to display the contacts by stepping through each char in
+  // $display_range and calling get_contacts to display the contacts that
+  // begin with that char.
+  for($i=0; $i<strlen($display_range); $i++) {
+    $l = substr($display_range,$i,1);
     $letter = strtoupper($l);
-    $n = strpos($letters,$l)+1;
-    if( $page_mode == '!19' ) {
-      $parms = array(array($title, "<", "a"));
-    }
-    else {
-      $parms = array();
-      $parms[] = array($title, ">=", $l);
-      if( $n < strlen($letters) ) {
-        $parms[] = array($title, "<", $letters{$n});
+    $sort = $title." asc";
+
+    // List all contacts beginning with a symbol first.  The '!' is used to
+    // denote when we should display the symbols section.
+    if( $l == "!" ) {
+      $letter = "Symbols"; // Give the symbol list a nicer title
+      // List of chars we will use to find symbols
+      // WARNING: Changing the value of $symbols will likely break things.
+      // If you do add chars to $symbols, you must add a pair of chars that will
+      // be searched between.
+      $symbols = chr(31)."09AZaz".chr(127);  // This list covers all common ascii symbols
+      // Add contacts that begin with a char between $s and $s+1
+      for($j=0; $j<strlen($symbols); $j++) {
+        $s = substr($symbols,$j++,1);
+        $parms = array();
+	$parms[] = array($title, ">", $s);
+	$s = substr($symbols,$j,1);
+	$parms[] = array($title, "<", $s);
+        if( $overview != 'company' ) {
+	  $parms[] = array("inextern", "=", $ie);
+	}
+	if($tickets) {
+	  $moretickets = $zen->get_contacts($parms,$tabel,$sort);
+	  if($moretickets) { $tickets = array_merge($tickets, $moretickets); }
+	}
+	else {
+	  $tickets = $zen->get_contacts($parms,$tabel,$sort);
+        }
       }
     }
-    $sort = $title." asc";
-    if( $overview != 'company' ) {
-      $parms[] = array("inextern", "=", $ie);
+    else {
+      // Add contact beginning with letter $l
+      $parms = array();
+      $parms[] = array($title, "like", $l.'%');
+      if( $overview != 'company' ) {
+        $parms[] = array("inextern", "=", $ie);
+      }
+      $tickets = $zen->get_contacts($parms,$tabel,$sort);
     }
-    $tickets = $zen->get_contacts($parms,$tabel,$sort);
+
     if( $overview == 'company' ) {
       $tickets = $hotkeys->activateList($tickets, 'title', 'title', "KeyEvent.loadUrl('$rootUrl/contact.php?cid={company_id}')");
     }
